# SeeOnWebApp

./: db.sqlite3  manage.py  pyproject.toml  test.py
SeeOnProject/: asgi.py  settings.py  urls.py  wsgi.py
json/: countries.json  directors.json  genres.json  top100movies.json
movies/: admin.py  dataclasses.py  models.py  urls.py  utils.py  views.py
movies/management/commands/: import_countries.py  import_directors.py  import_genres.py  import_movies.py  update_directors.py  update_movies_info.py
movies/migrations/: 0001_initial.py  0002_alter_genre_icon_alter_genre_picture_and_more.py  0003_genre_order_alter_genre_icon_alter_genre_picture.py  0004_country.py  0005_director_genre_is_main_alter_genre_subtitle.py  0006_alter_country_options_alter_director_options.py  0007_alter_mediatype_options_alter_mediatype_name_and_more.py  0008_director_image_movie_director_alter_movie_movie_type.py
movies/static/: auth-forms-script.js  lean_modal.js  search.js  style.css
movies/templates/movies/: calibration.html  catalog.html  film_card.html  film_card_calibration.html  film_card_recomendations.html  film_card_watchlist.html  filmpage.html  filter_result.html  home.html  (+5 more)
templates/: header.html  header_lk.html
users/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_date_of_birth_user_is_calibrated.py  0003_mediatype_alter_watchlist_options.py  0004_delete_mediatype.py  0005_preference.py  0006_recomendations.py  0007_alter_preference_kpid_alter_recomendations_kpid_and_more.py
(+16 files in other folders)
