[tool.poetry]
name = "seeonwebapp"
version = "0.1.0"
description = ""
authors = ["uberautistic <andrejzaiko6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
certifi = "^2024.8.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
